added movie booking lld and machine coding